# upd8r

./: .gitignore  Cargo.toml  default.nix  flake.nix
nix/: sources.json
src/: discord.rs  event_loop.rs  hs2.rs  lib.rs  main.rs  mastodon.rs  sb20020.rs  steam.rs  twitter.rs
