[package]
name = "upd8r"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.26"
derive_more = "0.99.3"
serde_with = "1.4.0"
serenity = "0.8.0"
dotenv = "0.15.0"

[dependencies.rss]
version = "1.9.0"
features = ["from_url"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.attohttpc]
version = "0.12.0"
features = ["json"]
