[package]
name = "upd8r"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.26"
derive_more = "0.99.3"
serde_with = "1.4.0"
serenity = "0.8.0"
dotenv = "0.15.0"
egg-mode = "0.14.0-beta.1"
tokio = "0.2"

[dependencies.reqwest]
version = "0.9.24"
features = ["rustls-tls"]
default-features = false

[dependencies.rss]
version = "1.9.0"
features = ["from_url"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.attohttpc]
version = "0.12.0"
features = ["json", "tls-rustls", "compress"]
default-features = false

[dependencies.openssl]
version = "0.10.28"
features = ["vendored"]
