[package]
name = "upd8r"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.26"
derive_more = "0.99.3"
serde_with = "1.4.0"
serenity = "0.8.0"
dotenv = "0.15.0"
tokio = "0.2"
scraper = "0.11.0"
chrono = "0.4.11"
url = "2.1.1"
crossbeam-channel = "0.4.2"

[dependencies.elefren]
version = "0.21.0"
features = ["rustls-tls", "toml"]
default-features = false

[dependencies.reqwest]
version = "0.9.24"
features = ["rustls-tls"]
default-features = false

[dependencies.rss]
version = "1.9.0"
features = ["from_url"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.attohttpc]
version = "0.12.0"
features = ["json", "tls-rustls", "compress"]
default-features = false

[profile.release]
opt-level = 1
lto = "off"
